welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: 'case' expected but '(' found.
    (cig, false) if cig >= 40 && cig <= 60 => return true
    ^cigarParty:4: error: '}' expected but ';' found.
    (_,false) => return false
^cigarParty:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    (_,false) => return false
       ^cigarParty:5: error: ';' expected but 'if' found.
    (cig, true) if cig >=40 => return true
                ^cigarParty:9: error: eof expected but '}' found.
 }
 ^