welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  (cigars, isWeekend) match{
    (cig, false) if cig >= 40 && cig <= 60 => return true
    (_,false) => return false
    (cig, true) if cig >=40 => return true
    (_,_) => return false
  }
}